--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,3 +79,16 @@ dialog:modal {
   max-width: 100vw;
   max-height: 100vh;
 }
+
+.spinner_HIK5 {
+  transform-origin: center;
+  animation: spinner_XVY9 1s cubic-bezier(0.36, 0.6, 0.31, 1) infinite;
+}
+@keyframes spinner_XVY9 {
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
